trabalho/Resultados/SamaraGoncalves/main/result_compilation.txt
executiva.c:54:2: error: #endif without #if
   54 | #endif // _EXECUTIVA_H_
      |  ^~~~~
executiva.c: In function ‘criaExecutiva’:
executiva.c:21:1: warning: control reaches end of non-void function [-Wreturn-type]
   21 | }
      | ^
